--- a/styles.css
+++ b/styles.css
@@ -6,5 +6,5 @@
 }
 
 body p {
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
