teste de largura do texto

--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,9 @@
 body{
   font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
+
+.conceito{
+
+  width: 200px ;
+	
+}
