--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,14 @@
 
 body{
   font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  margin-top: 40px;
+  margin-left: 45px;	
 }
 
 .subtitulo{
 
 font-size: 40px;
-padding-bottom: 10px;
+padding-bottom: 15px;
 
 }
 
