--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 }
 
 body{
-  font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;	
+  font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  text-align: justify;
 }
 
 .subtitulo{
