--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ padding-bottom: 15px;
 margin-top: 40px;
 margin-left: 45px;
 color: rgb( 8, 18, 30);
+display:flex;
 	
 }
 
@@ -25,6 +26,7 @@ color: rgb( 8, 18, 30);
   width: 500px ;
   margin-left: 45px;
   float: left;
+  display:flex;
 	
 }
 
@@ -32,8 +34,9 @@ img{
 
 float: right;
 border-radius: 16px;
-margin-right: 400px;
-
+margin-right: 600px;
+display:flex;
+	
 }
 
 
