--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body{
   font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   text-align: justify;
-  background: rgb (240, 237, 216);
+  background: #f0edd8;
 }
 
 .subtitulo{
@@ -56,7 +56,7 @@ a{
 }
 header{
    text-align: center;
-   background: rgb ( 240, 225, 216);
+   background: #f0e1d8;
 
 }
 nav {
