--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,6 @@ body.dark-theme {
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 header.dark-theme {
-background: #f0edd8;
+background: #08121e;
 	
 }
