--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
 	box-sizing: border-box;
 
 }
+li{
+ 	width: 50px
+	
+}
 
 body{
   font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
