--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ li{
 .colum2 {
 	padding-top:10px;
 	background: #f0e1d8;
+	padding-bottom:25px;
 }
 body{
   font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
