--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ li{
 	background: #f0e1d8;
 	padding-bottom:25px;
 }
+
+.colum3 {
+	padding-top:10px;
+	padding-bottom:25px;
+}
 body{
   font-family: "Ginto Nord", "Whitney", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   text-align: justify;
