--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ header.dark-theme {
 background: #08121e;
 transition: background-color 0.3s ease, color 0.3s ease;
 }
-.rodape.dark-theme{
+body.dark-theme .rodape{
 background: #08121e;
 transition: background-color 0.3s ease, color 0.3s ease;
 	
